src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>qbdialer__ContactScore__c</fullName>
        <description>This field stores the InsideSales.com NeuralView Contactability Score</description>
        <label>NeuralView: Contactability Score</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Dials__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>QBDialer managed package field.</inlineHelpText>
        <label>Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__LastCallTime__c</fullName>
        <description>The field should not be modified by users, it is intended for use in the filters of the Seek Initiatives.</description>
        <label>Last Call Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ResponseTime__c</fullName>
        <description>This field will store the number of seconds between record creation time and first call time (via the PowerDialer).</description>
        <inlineHelpText>This field will store the number of seconds between record creation time and first call time (via the PowerDialer).</inlineHelpText>
        <label>Response Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__TimeZoneSidKey__c</fullName>
        <description>This field will store the TimeZoneSidKey for the Contact.</description>
        <label>TimeZone Sid Key</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Currency_Test__c</fullName>
        <label>Currency Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Describe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Describe</label>
        <referenceTo>rh2__PS_Describe__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Formula_Test__c</fullName>
        <formula>rh2__Currency_Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Integer_Test__c</fullName>
        <label>Integer Test</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>totango__TotangoFirstActivity__c</fullName>
        <label>TotangoFirstActivity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>totango__TotangoLastActivity__c</fullName>
        <label>TotangoLastActivity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>totango__Totango_Insights__c</fullName>
        <label>Totango Insights</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totango__Totango_Last_Update__c</fullName>
        <description>Last update timestamp of totango api</description>
        <label>Totango Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>totango__Totango_Online_Status__c</fullName>
        <formula>IF( CONTAINS( totango__Totango_isOnline__c , &quot;totango&quot;), IMAGE( totango__Totango_isOnline__c, &quot;N/A&quot;) , IMAGE(&quot;https://app.totango.com/images/emptyPixel.png&quot;,&quot;N/A&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totango Online Status Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totango__Totango_URL__c</fullName>
        <description>URL to Totango Platform</description>
        <label>Totango URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>totango__Totango_isOnline__c</fullName>
        <label>Totango Online Status</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>zqu__County__c</fullName>
        <label>County</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Support_PIN__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <sharedTo>
            <roleAndSubordinatesInternal>VP_of_Client_Success</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contacts_Created_Today</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Contacts Created Today</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Jarrod_Insights_Billing</fullName>
        <columns>CONTACT.PHONE1</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Jarrod - Insights Billing</label>
        <sharedTo>
            <role>Launch_Team</role>
            <role>Strategic_Business_Development</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_New_Contacts_This_Week</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>My New Contacts (This Week)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Rebecca_Insights_Billing</fullName>
        <columns>CONTACT.PHONE1</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Rebecca - Insights Billing</label>
        <sharedTo>
            <role>Launch_Team</role>
            <role>Strategic_Business_Development</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Retention_Campaign_last_31_days</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN_MEMBER.STATUS</field>
            <operation>equals</operation>
            <value>Not Sent</value>
        </filters>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <label>Retention Campaign last 31 days</label>
        <sharedTo>
            <group>JIRA_Email</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SBD_Homestead_WinBack_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>SBD: Homestead WinBack Contacts</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>